RESOLVED FIXED185117
Fixed a very unlikely race condition in WTF::WordLock
https://bugs.webkit.org/show_bug.cgi?id=185117
Summary Fixed a very unlikely race condition in WTF::WordLock
Geoffrey Garen
Reported 2018-04-28 21:19:49 PDT
Fixed a very unlikely race condition in WTF::WordLock
Attachments
Patch (3.14 KB, patch)
2018-04-28 21:34 PDT, Geoffrey Garen
saam: review+
Geoffrey Garen
Comment 1 2018-04-28 21:34:07 PDT
Geoffrey Garen
Comment 2 2018-04-28 21:36:08 PDT
I'm not sure which arguments are best for LockSpeedTest. These results looked OK to me: ~/OpenSource> ./LockSpeedTest-baseline wordlock 1 4 10 20 40 2 WTFWordLock: 15528.899 KHz WTFWordLock = {15528.899}; ===== ~/OpenSource> ./LockSpeedTest wordlock 1 4 10 20 40 2 WTFWordLock: 15297.111 KHz WTFWordLock = {15297.111}; ~/OpenSource> ./LockSpeedTest-baseline wordlock 1 4 128 1024 40 2 WTFWordLock: 1505.704 KHz WTFWordLock = {1505.704}; ===== ~/OpenSource> ./LockSpeedTest wordlock 1 4 128 1024 40 2 WTFWordLock: 1499.678 KHz WTFWordLock = {1499.678};
Geoffrey Garen
Comment 3 2018-04-28 21:42:51 PDT
Side note: ParkingLot does not have this bug. (It uses reference counting instead of the "lock more" solution I used here.)
Geoffrey Garen
Comment 4 2018-04-29 08:23:54 PDT
Radar WebKit Bug Importer
Comment 5 2018-04-29 08:24:18 PDT
Yusuke Suzuki
Comment 6 2022-04-06 03:33:01 PDT
*** Bug 185547 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.